--- a/style.css
+++ b/style.css
@@ -1,1 +1,88 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto+Slab:wght@500&family=Source+Sans+Pro:wght@200;400;600&display=swap');
+body {
+    background-color: #eee;
+    /* border-color: #eee; */
+    /* border-color:black; */
+    /* border: 1px solid red; */
+    margin: 0px;
+    font-family: Source Sans Pro;
+}
+header {
+   
+}
+.date {
+    font-size: .75em;
+}
+header h1 {
+    font-family: Abril Fatface;
+    text-align: center;
+    font-size: 2.7em;
+    
+}
+.newspaper-container {
+    margin: 1em 1em;
+    width: 700px;
+    background-color: white;
+    margin: 0px auto;
+    border-radius: 1em;
+    margin-top: 3em;
+    padding: 1em;
+    box-shadow: 2px 4px 20px #ddd;
+    /* border: 1px solid red; */
+}
+nav {
+    border-top: 1px solid #eee;
+    border-bottom: 1px solid #eee;
+    padding: 0px;
+}
+nav ul {
+    
+    /* border: 1px solid red; */
+    /* padding-left: 0px;
+    padding-right: 0px; */
+    margin: .5em 0em;
+}
+nav li{
+    list-style-type: none;
+    display: inline-block;
+    /* border: 1px solid blue; */
+    font-size: .8em;
+    padding: 0em .8em;
+   
+   }
+nav a {
+    text-decoration: none;
+    color: #777;
+}
+main h2 {
+    font-size: 1.6em;
+}
+main h5 {
+    color: #dd3232;
+    font-size: .8em;
+    font-family: Roboto Slab;
+}
+main h2, .more-articles h4 {
+    font-family: Roboto Slab;
+}
+main p , .more-articles p{
+    padding: 0em 1.4em;
+    text-align: justify;
+    
+}
+
+main img {
+    width: 100%;
+}
+.more-articles section {
+    width: 314px;
+    display: inline-block;
+    
+    margin: 0px;
+    /* border: 1px solid red; */
+    padding-left: 32px;
+}
+.more-articles {
+    margin-top: 1.5em;
+    border-top:1px solid #eee;
+}
